--- a/index.html
+++ b/index.html
@@ -7,13 +7,6 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="loading-screen" id="loadingScreen">
-        <div class="loading-text">ZEN HOSTING DASHBOARD</div>
-        <div class="loading-bar">
-            <div class="loading-progress"></div>
-        </div>
-    </div>
-
     <div class="dashboard" id="dashboard">
         <div class="header">
             <h1 class="title">ZEN HOSTING</h1>
@@ -42,7 +35,7 @@
         <div class="bots-section">
             <h2 class="section-title">BOT MANAGEMENT</h2>
             <div class="bots-grid" id="botsGrid">
-                <!-- Bot cards will be populated here -->
+                <div class="loading-message">Loading bots data...</div>
             </div>
         </div>
     </div>
